ADCM-2041_3 fix remarks

--- a/tests/ui_tests/test_host_page_data/cluster/config.yaml
+++ b/tests/ui_tests/test_host_page_data/cluster/config.yaml
@@ -14,3 +14,10 @@
   name: test_cluster
   version: 1.5
   edition: community
+
+- type: service
+  name: test_service
+  description: Test service
+  version: '1.2'
+  components:
+    first:
